compiler/tests/fixtures/negative/error_sema_cond.sol
// E1003: condition must be of type bool.
function start() -> int {
    if (42) {
        return 1;
    }
    return 0;
}
